
[TestMoveCmd/fails_when_pattern_doesnt_match_any_window - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad move foo

Output

Error
 Error: no windows matched the pattern 'foo'

---

[TestMoveCmd/moves_current_focused_window_to_scratchpad_when_empty - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad move 

Output
Moving window 5678 | Finder  to scratchpad
Window '5678 | Finder ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/fails_when_getting_all_windows_return_an_erro - 1]
aerospace-scratchpad move test

Output

Error
 Error: unable to get windows: mocked_error

---

[TestMoveCmd/moves_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad move Notepad

Output
Moving window 1234 | Notepad  to scratchpad
Window '1234 | Notepad ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/fails_when_moving_a_window_to_scratchpad - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad move Finder

Output

Error
Error: Window '5678 | Finder ' already belongs to scratchpad

---

[TestMoveCmd/[dry-run]_move_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad move Notepad --dry-run

Output
Moving window 1234 | Notepad  to scratchpad
[dry-run] MoveWindowToWorkspace(windowID=1234, workspace=.scratchpad)
[dry-run] SetLayout(windowID=1234, layout=floating)
Window '1234 | Notepad ' hidden to scratchpad

Error
 <nil>
---
